fix: improve code